--- a/.github/workflows/.github-ci.yaml
+++ b/.github/workflows/.github-ci.yaml
@@ -2,7 +2,7 @@ name: CI/CD Pipeline
 
 on:
   pull_request:
-    types: [open]
+    types: [opened, reopened, synchronize]
     branches: [main]
 
 jobs:
