--- a/.github/workflows/.github-ci.yaml
+++ b/.github/workflows/.github-ci.yaml
@@ -6,25 +6,15 @@ on:
     branches: [main]
 
 jobs:
-  build:  # Build stage
+  lint_format:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3  # Copy repo
-      - name: Setup Python         # Step to install Python 3.9
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
-      - name: Install Dependencies  # Step to install requirements.txt
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Build Application
-        run:
-          echo "Building..."
+      - uses: actions/checkout@v3
+      - name: pre-commit
+        uses: pre-commit/action@v3.0.0
 
-  test:  # Test stage (depends on the build stage's success)
+  test:
     runs-on: ubuntu-latest
-    needs: build
     steps:
       - uses: actions/checkout@v3
       - name: Setup Python
@@ -34,16 +24,8 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          # pip install -r requirements.txt
       - name: Run Tests
-        run:
+        run: |
           echo "Testing..."
-
-  deploy: # Deploy stage
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy to Production
-        run:  # Your deployment commands here (e.g., using SSH, etc.)
-          echo "Deploying..."
+          
