--- a/.github/workflows/.github-ci.yaml
+++ b/.github/workflows/.github-ci.yaml
@@ -45,7 +45,7 @@ jobs:
       - name: Install Dependencies
         run: |
           poetry install
-
-      - name: Run Tests
-        run: |
-          poetry run pytest tests
+#     Uncomment this line when first tests appear
+#      - name: Run Tests
+#        run: |
+#          poetry run pytest tests
