--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ addopts = "--cov=src --cov-report=term-missing --cov-report=html --import-mode=i
 [tool.coverage.run]
 branch = true
 omit = [
+    "**/__init__.py",
     "**/config/*.py",
     "**/tests/*.py",
     "**/sandbox.py",
