--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+numpy = "^2.2.3"
 torch = "^2.6.0"
 
 [tool.poetry.group.dev.dependencies]
