--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.12"
 numpy = "^2.2.3"
 torch = "^2.6.0"
+torchtext = "^0.18.0"
+pandas = "^2.2.3"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.1.0"
