--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 numpy = "^2.2.3"
 torch = "^2.6.0"
 torchtext = "0.6.0"
+sacremoses = "0.0.5"
 pandas = "^2.2.3"
 
 [tool.poetry.group.dev.dependencies]
