--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-numpy = "^2.2.3"
+numpy = "^1.18.5"
 torch = "^2.6.0"
+gensim = "^4.3.3"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.1.0"
