Feat/transfer data download (#16)
* docs: Update Readme with instructions how to download the data

* chore: Remove example csv file

* chore: Update poetry with torchtext and pandas

* feat: Add setup_device function

* feat: Add logger setup

* chore: Update poetry

Change torchtext version and remove logger from tests

* feat: Add Data class for preparing data

* test: Add tests for prepare_data

* test: Add tests for setup device

* fix: Add sacremoses to poetry

* chore: Add csv files to gitignore

* style: Update args and comments according to Aynur's remarks

* fix: Change to "tuple" for init_dataset

* style: Change batch_size to batch_sizes

* test: Add tests for init_dataset

* chore: Add warnings ignore for pytest

* chore: Update poetry lock

* chore: Delete pytest.ini

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.12"
 numpy = "^1.18.5"
 torch = "^2.6.0"
+torchtext = "0.6.0"
+sacremoses = "0.0.5"
+pandas = "^2.2.3"
 gensim = "^4.3.3"
 
 [tool.poetry.group.dev.dependencies]
@@ -41,6 +44,7 @@ omit = [
     "**/config/*.py",
     "**/tests/*.py",
     "**/sandbox.py",
+    "**/logger.py"
 ]
 
 [tool.coverage.report]
