--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,8 @@ omit = [
     "**/config/*.py",
     "**/tests/*.py",
     "**/sandbox.py",
-    "**/logger.py"
+    "**/logger.py",
+    "**/prepare_data.py"
 ]
 
 [tool.coverage.report]
