--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ torchtext = "0.6.0"
 sacremoses = "0.0.5"
 pandas = "^2.2.3"
 gensim = "^4.3.3"
+navec = "^0.10.0"
+slovnet="^0.6.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.1.0"
