--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ torchtext = "0.6.0"
 sacremoses = "0.0.5"
 pandas = "^2.2.3"
 gensim = "^4.3.3"
+navec = "^0.10.0"
+slovnet="^0.6.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.1.0"
@@ -44,7 +46,8 @@ omit = [
     "**/config/*.py",
     "**/tests/*.py",
     "**/sandbox.py",
-    "**/logger.py"
+    "**/logger.py",
+    "**/prepare_data.py"
 ]
 
 [tool.coverage.report]
