--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ navec = "^0.10.0"
 slovnet="^0.6.0"
 dvc="^3.59.2"
 wandb="^0.19.11"
+Natasha="^1.6.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.1.0"
