--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ slovnet="^0.6.0"
 dvc="^3.59.2"
 wandb="^0.19.11"
 Natasha="^1.6.0"
+jupyterlab = "^4.4.2"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.1.0"
