Feat: final changes (#31)
* docs: Update READMe with tasks, worflow and general project info

* feat: Add do_epoch function

* feat: Add fit function

* docs: Add documentation for do_epoch and fit, Add type hints

* test: Add tests for do_epoch

* test: Add tests for fit

* feat: Try to add main function

* chore: delete extra tests

* feat: add main function

* feat: add label_smoothing_loss

* fix: fix labelsmoothingloss

* docs: Fix readme command with addition ```

* docs: Add descritiption to tqdm in init_dataset

* fix: Fix logger messages in Data class

* fix: Update parameters for EncoderDecoder in train.py

* refactor: Update NoamOpt logic

* chore: Add vocab_size and d_model to output of create_pretrained_embedding

* fix: Fix dimensionalities in do_epoch and fit

* chore: Swap DEVICE and create_embedding in train

* fix: Add None for scheduler in val do_epoch

* docs: Add comment for heads_count=10

* fix: First fix of building a vocab

* fix: Second fix of building a vocab

* Revert "fix: Second fix of building a vocab"

This reverts commit 329c43ad77576dcd2eb812ca7a33ed7a456c94ab.

* Revert "fix: First fix of building a vocab"

This reverts commit ac6acbe738253716bbf23369c4c728468c95d578.

* test: Fix tests in new concept

* fix: Fix vocabulary error

* test: Delete prepare_data from testing

Later maybe

* chore: Add new libs to poetry

* docs: Add new comments in do_epoch

* feat: Add dvc pipeline

* chore: Add dvc to requirements

* docs: Update readme with dvc pipeline and make command info

* feat: Add make for train

* chore: Add wandb to poetry

* chore: Delete min_frequency from init_dataset

* chore: Create hparams file in model folder

* feat: Add wandb logic

* chore: Change raw and processed data folders to one data folder

* chore: Add wandb folder to gitignore

* feat: Add test_loss for wandb

* test: Update tests and ruff format

* chore: Add src/wandb to gitignore

* chore: Delete loss for test in wandb

* fix: Fix tokens in Data vocabu

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,12 @@ pandas = "^2.2.3"
 gensim = "^4.3.3"
 navec = "^0.10.0"
 slovnet="^0.6.0"
+dvc="^3.59.2"
+wandb="^0.19.11"
+Natasha="^1.6.0"
+jupyterlab = "^4.4.2"
+matplotlib = "^3.10.1"
+seaborn = "^0.13.2"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.1.0"
@@ -47,7 +53,8 @@ omit = [
     "**/tests/*.py",
     "**/sandbox.py",
     "**/logger.py",
-    "**/prepare_data.py"
+    "**/prepare_data.py",
+    "**/inference.py",
 ]
 
 [tool.coverage.report]
