--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,6 @@ config.ini
 .idea/
 
 # Unit test / coverage reports
-htmlcov/
 .tox/
 .nox/
 .coverage
@@ -36,3 +35,6 @@ coverage.xml
 cover/
 *.csv
 /embeddings
+/wandb/
+/src/wandb
+/model
